# hackathon1-book-creation

./: .gitignore  README.md
.claude/: settings.local.json
.specify/memory/: constitution.md
backend/isaac_ros_workspace/scripts/: test_ai_navigation.py  test_synthetic_sensor_processing.py  test_vslam_pipeline.py
backend/isaac_ros_workspace/src/isaac_ros_messages/: CMakeLists.txt  package.xml
backend/isaac_ros_workspace/src/isaac_ros_messages/action/: Perception.action  Vslam.action
backend/isaac_ros_workspace/src/isaac_ros_messages/msg/: AprilTagDetection.msg  ObjectDetection2D.msg  ObjectDetection3D.msg  PerceptionData.msg  SemanticSegmentation.msg  VslamResults.msg
backend/isaac_ros_workspace/src/isaac_ros_messages/srv/: GetPerceptionData.srv  StartPerception.srv  StopPerception.srv
backend/isaac_ros_workspace/src/vla_module/: CMakeLists.txt  README.md  isaac_sim_setup.sh  package.xml  requirements.txt  setup.py
backend/isaac_ros_workspace/src/vla_module/cognitive_planning/: action_converter.py  cognitive_planning_server.py  command_parser.py  task_planner.py
backend/isaac_ros_workspace/src/vla_module/launch/: vla_system.launch.py
backend/isaac_ros_workspace/src/vla_module/task_execution/: task_execution_manager.py
backend/isaac_ros_workspace/src/vla_module/test/: test_vla_integration.py  test_voice_recognition.py
backend/isaac_ros_workspace/src/vla_module/vla_msgs/: package.xml  setup.py
backend/isaac_ros_workspace/src/vla_module/vla_msgs/action/: ExecuteActionStep.action  ExecuteTask.action  PlanActions.action
backend/isaac_ros_workspace/src/vla_module/vla_msgs/msg/: ActionStep.msg  CognitivePlan.msg  TaskExecutionState.msg  VoiceCommand.msg
backend/isaac_ros_workspace/src/vla_module/vla_msgs/srv/: ValidateCapability.srv
backend/isaac_ros_workspace/src/vla_module/voice_recognition/: audio_capture.py  voice_command_publisher.py  voice_processor.py  whisper_interface.py
backend/isaac_ros_workspace/test/: test_nav2_interface.py  test_perception_pipeline.py
backend/isaac_sim/configs/: sim_config.yaml
backend/isaac_sim/scripts/: test_humanoid_movement.py  test_photorealistic_rendering.py  test_synthetic_data_generation.py
backend/isaac_sim/test_scenes/: README.md
backend/nav2/config/: controller_server_params.yaml  costmap_common_params.yaml  humanoid_nav2_params.yaml  planner_server_params.yaml
backend/nav2/launch/: humanoid_navigation.launch.py
backend/nav2/scripts/: footstep_planner.py  test_nav2_bipedal_navigation.py
docs/: intro.md
docs/assessments/: chapter-1.md  index.md  rubrics.md
docs/module-1-intro/: basics.md  exercises.md  setup.md
docs/module-3-ai-robot-brain/: index.md  intro.md  quickstart.md  success_criteria_verification.md  troubleshooting.md
docs/module-3-ai-robot-brain/assessments/: index.md  isaac-ros-assessment.md  nav2-assessment.md
docs/module-3-ai-robot-brain/isaac-ros/: perception-pipelines.md  vslam-setup.md
docs/module-3-ai-robot-brain/isaac-sim/: index.md  synthetic-data-generation.md
docs/module-3-ai-robot-brain/nav2/: exercises.md  index.md
docs/module-4-vla/: capstone-project.md  cognitive-planning.md  demo-guide.md  intro.md  task-execution.md  voice-to-action.md
docs/module-4-vla/assessments/: rubrics.md  vla-assessment.md
docs/module-4-vla/autonomous-execution/: capstone-project.md  exercises.md
docs/module-4-vla/cognitive-planning/: exercises.md  ros2-conversion.md
docs/module-4-vla/voice-to-action/: exercises.md
docusaurus/: docusaurus.config.js  package-lock.json  package.json  sidebars.js
docusaurus-project/: docusaurus.config.js
docusaurus/blog/: 2023-01-01-welcome.md
docusaurus/src/css/: custom.css
frontend-book/: package-lock.json  package.json
frontend/docusaurus-project/: package-lock.json  package.json  sidebars.js
specs/001-gazebo-unity-digital-twin/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-ros2-module/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-vla-module/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-isaac-ai-robot-brain/: data-model.md  quickstart.md  research.md  spec.md  tasks.md
(+143 files in other folders)
